--- a/GrandaPruebaPaises/Views/VistaConsultado.xaml
+++ b/GrandaPruebaPaises/Views/VistaConsultado.xaml
@@ -3,10 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GrandaPruebaPaises.Views.VistaConsultado"
              Title="VistaConsultado">
-    <VerticalStackLayout>
+    <StackLayout>
         <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+            Text="Paises Consultados"
+            HorizontalOptions="Center"
+            FontSize="24" />
+        <ListView x:Name="ListViewPaises">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextCell Text="{Binding Nombre}"
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+    </StackLayout>
 </ContentPage>
