--- a/GrandaPruebaPaises/Views/VistaPrincipal.xaml
+++ b/GrandaPruebaPaises/Views/VistaPrincipal.xaml
@@ -1,12 +1,29 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:viewModels="clr-namespace:GrandaPruebaPaises.ViewModel"
              x:Class="GrandaPruebaPaises.Views.VistaPrincipal"
-             Title="VistaPrincipal">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Title="Vista Principal">
+
+    <ContentPage.BindingContext>
+        <viewModels:VistaPrincipalViewModel />
+    </ContentPage.BindingContext>
+
+
+    <StackLayout Padding="10">
+        <Label Text="Buscar País" FontSize="Large" HorizontalOptions="Center" />
+
+        <Entry x:Name="paisEntry" Placeholder="Ingrese el nombre del país" Text="{Binding NombrePais}" />
+
+        <Button Text="Buscar" Command="{Binding BuscarComando}" />
+
+        <Label Text="{Binding MensajeError}" TextColor="Red" IsVisible="{Binding IsErrorVisible}" />
+
+        <Label Text="Resultado de búsqueda:" FontSize="Medium" />
+
+        <Label Text="{Binding NombrePais}" />
+        <Label Text="{Binding Region}" />
+        <Label Text="{Binding EnlaceGoogleMaps}" />
+        <Label Text="{Binding NombreBD}" />
+    </StackLayout>
 </ContentPage>
